[project]
name = "ComfyUI-Show_Any_Text_in_CMD_Console-SG"
description = "Simple node to show ANY output text in the CMD console with color options"
version = "0.9.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]


[project.urls]
Repository = "https://github.com/ShammiG/ComfyUI-Show_Any_Text_in_CMD_Console-SG"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/ShammiG/ComfyUI-Show_Any_Text_in_CMD_Console-SG/blob/main/README.md"
"Bug Tracker" = "https://github.com/ShammiG/ComfyUI-Show_Any_Text_in_CMD_Console-SG/issues"

[tool.comfy]
PublisherId = "shammi-g"
DisplayName = "ComfyUI-Show_Any_Text_in_CMD_Console-SG"
Icon = "" 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility







